# scrumple

./: .gitignore  .travis.yml  Cargo.toml  README.md  origami.json
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: main.yml  publish-to-cargo.yml  publish-to-npm-as-latest.yml  publish-to-npm-as-prerelease.yml  publish.yml  test.yml
ci/: before_deploy.sh  script.sh
esparse/examples/: lex-echo.rs
esparse/src/: ast.rs  lex.rs  lib.rs  skip.rs
examples/es6-cycles/: even.mjs  index.mjs  odd.mjs
examples/es6-everywhere-simple/: index.js
examples/es6-forms/: index.mjs
examples/es6-reexport/: index.mjs
examples/es6-simple/: package-lock.json  package.json
examples/es6-views/: index.mjs
examples/npm-dev-dep-with-complicated-deps/: package.json
examples/one-file/: index.js
examples/reproducing/: README.md
examples/simple/: package-lock.json  package.json
fixtures/bower/bower_components/dependency-with-dot-bower-dot-json/: main.js
fixtures/bower/bower_components/js-and-sass-entries/: bower.json
fixtures/bower/bower_components/sass-and-js-entries/: .bower.json
fixtures/bower/bower_components/single-js-array/: bower.json
fixtures/browser/replace-dependency/: package.json
fixtures/resolve/dotfiles/mod-js/: package.json
fixtures/resolve/mod-js-ext-rel/: package.json
fixtures/resolve/mod-outer/mod-parent-noslash/: package.json
fixtures/tools/: package-lock.json
npm/: .npmignore  index.js  oax  package-lock.json  package.json  postinstall.js  readme.md
npm/oax-darwin/: oax  package-lock.json  package.json
npm/oax-linux-64/: index.js  oax  package-lock.json  package.json
npm/oax-windows-64/: index.js  package-lock.json  package.json
npm/scrumple-darwin/: package-lock.json  package.json
npm/scrumple-linux-64/: package-lock.json  package.json
npm/scrumple-windows-64/: package-lock.json  package.json
pax/: Cargo.toml
pax/examples/browser/: index.js
pax/fixtures/browser/alternate-main-bare/: package.json
pax/fixtures/browser/alternate-main-rel/: package.json
pax/fixtures/browser/alternate-main-subdir-bare/: package.json
pax/fixtures/browser/alternate-main-subdir-rel/: package.json
pax/fixtures/resolve/dotfiles/mod-json/: package.json
pax/fixtures/resolve/dotfiles/mod-mjs/: package.json
pax/fixtures/resolve/mod-json-ext-rel/: package.json
pax/fixtures/resolve/mod-mjs-ext-rel/: package.json
pax/fixtures/tools/: package-lock.json  package.json
pax/src/: es6.rs  head.js  main.rs  opts.rs
pax/src/test/: mod.rs
src/: bundler.rs  input_options.rs  main.rs  manifest.rs  modules.rs  path_ext.rs  resolver.rs  source_maps.rs  vlq.rs  worker.rs  writer.rs
src/es6/: error.rs  export.rs  import.rs  mod.rs
src/javascript/: head.js  tail.js
src/resolver/: mod.rs  test.rs
src/test/: mod.rs
src/test/snapshots/: scrumple__test__one-file bundle.snap
(+2 files in other folders)
