[package]
name = "scrumple"
version = "1.2.5"
authors = ["Nathan", "chee", "Jake"]
edition = "2018"

description = "A fast JavaScript bundler for Origami components"
repository = "https://github.com/financial-times/scrumple"
license = "MIT"
readme = "./README.md"

keywords = ["javascript", "ecmascript", "bundler", "origami"]
categories = ["development-tools", "command-line-utilities", "web-programming"]

autobins = true

exclude = [
  "examples/*",
  "private/*",
  "src/test/*",
]

[[bin]]
name = "scrumple"
path = "src/main.rs"

[features]
default = []
bench = []

[dependencies]
esparse = "0.1.0"
regex = "1"
fnv = "1.0.7"
lazy_static = "1.1.0"
crossbeam = "0.8"
num_cpus = "1.6"
matches = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "4.0"
memchr = "2.3.4"
base64 = "0.13.0"
walkdir = "2.3.1"
indoc = "1.0.3"

[dev-dependencies]
cfg-if = "1.0.0"
tempfile = "3"
indoc = "1.0"
walkdir = "2"
insta = "1.5.2"
